@@ -199,14 +199,28 @@
 	<welcome-file-list>
 		<welcome-file>index-cms.html</welcome-file>
 	</welcome-file-list>
+
 	<error-page>
 		<error-code>400</error-code>
-		<location>/index-cms.html</location>
+		<location>/ErrorPage.action?responseCode=400</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/jsp/protected/unauthorized.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/index-cms.html</location>
+		<location>/ErrorPage.action?responseCode=404</location>
 	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/ErrorPage.action?responseCode=500</location>
+	</error-page>
+	<error-page>
+		<error-code>501</error-code>
+		<location>/ErrorPage.action?responseCode=501</location>
+	</error-page>
+
 	<taglib>
 		<taglib-uri>webwork</taglib-uri>
 		<taglib-location>/WEB-INF/lib/webwork.jar</taglib-location>
